# back-short-link/src/main/java/ru/arsentiev/backshortlink/controller/UserController.java
@@ -4,7 +4,7 @@ import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
-import org.springframework.security.access.prepost.PreAuthorize;
+import org.springframework.security.core.Authentication;
 import org.springframework.web.bind.annotation.*;
 import ru.arsentiev.backshortlink.dsl.UserFilter;
 import ru.arsentiev.backshortlink.dto.UserRequest;
@@ -24,19 +24,25 @@ public class UserController {
         return ResponseEntity.ok(userService.findUserById(id));
     }
 
+    @GetMapping("/find/{username}")
+    public ResponseEntity<UserResponse> findByUsername(@PathVariable("username") String username,
+                                                       Authentication authentication) {
+        return ResponseEntity.ok(userService.findUserByNickName(username, authentication));
+    }
+
     @DeleteMapping("/{id}")
     public ResponseEntity<Void> deleteUser(@PathVariable("id") Integer id) {
         userService.deleteUserById(id);
         return ResponseEntity.noContent().build();
     }
 
-    @PutMapping("/{id}")
-    @PreAuthorize("hasAuthority('ADMIN') or #id == principal.id")
+    @PutMapping("/update/{id}")
     public ResponseEntity<UserResponse> updateUser(
             @PathVariable("id") Integer id,
-            @RequestBody @Valid UserRequest userRequest
+            @RequestBody @Valid UserRequest userRequest,
+            Authentication authentication
     ) {
-        return ResponseEntity.ok(userService.updateUser(id, userRequest));
+        return ResponseEntity.ok(userService.updateUser(id, userRequest, authentication));
     }
 
     @GetMapping
