# ui-short-link/src/app/services/models/user-request.ts
@@ -4,6 +4,5 @@ export interface UserRequest {
   email: string;
   firstName: string;
   lastName: string;
-  password: string;
   username: string;
 }
